ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-09-21 Daniel Andreca
	- GUI:
		* Fixed #1538: Not possible to add a domain alias with an already existing mountpoint

2008-09-20 Daniel Andreca
	- CONFIGS:
		* logrotate/ispcp fails if rsyslog is used

2008-09-16 Benedikt Heintel
	- TOOLS:
		* Updated: PHPmyAdmin to 2.11.9.1

2008-09-15 Daniel Andreca
	- GUI:
		* Fixed #1396: Wordwrap in ticket system (admin / client)
		* Fixed #1506: Email edit link inconsistent with other pages
	- ENGINE:
		* Fixed #1534: Setup script fails if the same username is always used

2008-09-14 Daniel Andreca
	- GUI:
		* Encrypt email password in database
		* Encrypt sql password in database
		* Fixed #1535: Wrong error text in user Email creation
		* Fixed #1396: Wordwrap in ticket system (reseler)
		* Fixed #1533 Hardcoded FTP sepparator

2008-09-10 Daniel Andreca
	- LANGUAGES:
		* Updated French (thanks momo)
		* Mail_add.php display incorrect messages
		* Fixed #1530: Inconsistency between current_ftp_cnt and actual ftp count: -9 != 1
	- CONFIGS:
		* logrotate/ispcp restart apache 10 times (http://www.isp-control.net/forum/apache-just-stopped-o-t-3747-2.html#pid35737)

2008-09-09 Daniel Andreca
	- ENGINE:
		* Fixed #1524: Warning on logrotate
		* Fixed #1528: mod-sql in lenny is not enabled by default

2008-09-05 Daniel Andreca
	- ENGINE:
		* Fixed #1526: apache logger problems

2008-09-03 Daniel Andreca
	- SETUP:
		* RC6 remote database support for upgrade script (thanks Standbye)

2008-09-02 Daniel Andreca
	- ENGINE:
		* Fixed #1522: ispcp-httpd-logs-mngr crashes if logfile doesn't exist
		* Fixed #1523: Weird logfiles for disabled domain

2008-09-01 Daniel Andreca
	- ENGINE:
		* ispcp-apache-logger is crashing
		* crontab entry for static awstats scripts broken
		* partial solve for #1232 domain_traffic becomes huge and slows down server

2008-08-29 Daniel Andreca
	- ENGINE:
		* maillogconvert.pl contains ilegal characters